--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/nurulhuda859/Mini-Bank-Managemant-System#readme",
   "dependencies": {
+    "express": "^4.16.4",
+    "joi": "^14.3.1",
     "pg": "^7.7.1"
   }
 }
