--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/nurulhuda859/Mini-Bank-Managemant-System#readme",
   "dependencies": {
+    "config": "^3.1.0",
     "express": "^4.16.4",
     "joi": "^14.3.1",
-    "mongoose": "^5.4.8",
-    "pg": "^7.7.1"
+    "mongoose": "^5.4.19",
+    "pug": "^2.0.3"
   }
 }
