--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mbms",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a complete webapp for managing a mini home bank.",
   "main": "index.js",
   "engines": {
     "node": "10.15.3"
@@ -23,8 +23,9 @@
   "dependencies": {
     "config": "^3.1.0",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
-    "mongoose": "^5.4.19",
+    "mongoose": "^5.5.4",
     "multer": "^1.4.1",
     "pug": "^2.0.3"
   }
