--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.5.4",
     "multer": "^1.4.1",
     "pug": "^2.0.3"
