--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.5.4",
     "multer": "^1.4.1",
+    "nodemailer": "^6.2.1",
     "pug": "^2.0.3"
   }
 }
