--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.5.4",
     "multer": "^1.4.1",
     "nodemailer": "^6.2.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "request": "^2.88.0"
   }
 }
