--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "mbms",
   "version": "1.2.0",
   "description": "This is a complete webapp for managing a mini home bank.",
-  "main": "index.js",
+  "main": "app.js",
   "engines": {
     "node": "10.15.3"
   },
   "scripts": {
-    "test": "node index.js",
-    "start": "node index.js"
+    "test": "node app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
